# python-project-52

./: .gitignore  Makefile  README.md  TODO  build.sh  db.json  db.sqlite3  dev-build.sh  env-example.env  initdb.json  pyproject.toml
.github/workflows/: lint-test.yml
labels/: models.py  urls.py  views.py
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_status_delete_statuses.py  0003_remove_status_is_published.py
task_manager/: context_processors.py  forms.py  mixins.py  settings.py  tests.py  urls.py  utils.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/templates/: index.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_status.py  0003_tasks_delete_task.py  0004_alter_tasks_status.py  0005_tasks_label.py  0006_remove_tasks_label_tasks_label.py  0007_alter_tasks_label.py  0008_rename_created_by_user_id_tasks_author_id_and_more.py
templates/labels/: create.html  delete.html  labels_list.html  update.html
templates/statuses/: create.html  delete.html  statuses_list.html  update.html
templates/task_manager/: base.html  index.html  login.html  metrika.html  navbar.html
templates/tasks/: create.html  delete.html  task.html  tasks_list.html  (+1 more)
users/: forms.py  tests.py  urls.py  views.py
(+33 files in other folders)
