[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A comprehensive Task Manager application built with Django, featuring CRUD operations, authentication, advanced filtering, and error tracking integration."
authors = ["Egor Efimov <odes36@gmail.com>"]
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.2"
django-bootstrap5 = "^23.4"
django-extensions = "^3.2.3"
ipython = "^8.21.0"
django-filter = "^24.1"
rollbar = "^0.16.3"
python-dotenv = "^1.0.1"
dj-database-url = "^2.1.0"
coverage = "^7.4.4"
psycopg2-binary = "^2.9.9"
[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
